sit-cv-front/src/app/cmp/designdoc/apidoc/apidoc.component.css
snack-bar-container {
  overflow-wrap: break-word;
  max-width: 100vw;
  max-height: 50vh;
}

app-apidoc .mat-card.apidoc-container {
  padding: 0;
  box-shadow: none;
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: hidden;
}

.apidoc-container .mat-card-header {
  display: block;
}

.apidoc-container .mat-card-header {
  display: block;
}

.mat-card-content {
  overflow-y: auto;
}

.apidoc-container .mat-list .mat-list-item {
  height: auto;
  white-space: pre-wrap;
  margin-bottom: 0.5rem;
  font-size: inherit;
}

.apidoc-container .mat-list .mat-list-item .mat-list-item-content {
  display: block;
}

.apidoc-deprecated {
  font-weight: bold;
}

.apidoc-method-declaration {
  padding-left: 4rem;
  text-indent: -4rem;
}

.apidoc-content-label {
  font-weight: bold;
}

.apidoc-content-item {
  padding-left: 0.5rem;
}

.apidoc-container .mat-card-footer {
  text-align: right;
  margin: 0;
}

